[package]
name = "hw-checker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
comfy-table = "7.2.2"
pci-info = "0.3.4"
raw-cpuid = "11.6.0"
rusb = "0.9.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sysinfo = "0.38.2"
thiserror = "2.0.18"
